--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
     <string name="app_name">TCP</string>
     <string name="name">Name</string>
-    <string name="connect">Подключиться</string>
+    <string name="connect">Connect</string>
     <string name="ip">IPv4</string>
     <string name="port">Port</string>
+    <string name="send">Send</string>
+    <string name="message">Message</string>
 </resources>
